[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Camera2DPlayer1.gd" type="Script" id=3]
[ext_resource path="res://Camera2DPlayer2.gd" type="Script" id=4]
[ext_resource path="res://BackgroundPlayer1.gd" type="Script" id=5]
[ext_resource path="res://UI/gameHud/playerHud.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/gameHud/player2Hud.gd" type="Script" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0, 0, 0, 1 )

[node name="hudPlayer1" parent="." instance=ExtResource( 6 )]

[node name="hudPlayer2" parent="." instance=ExtResource( 6 )]
offset = Vector2( 540, 0 )
transform = Transform2D( 1, 0, 0, 1, 540, 0 )
script = ExtResource( 7 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1023.0
margin_bottom = 602.0
alignment = 1

[node name="ViewportContainer" type="ViewportContainer" parent="Viewports"]
margin_right = 509.0
margin_bottom = 602.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewportPlayer1" type="Viewport" parent="Viewports/ViewportContainer"]
size = Vector2( 509, 602 )
handle_input_locally = false
render_target_update_mode = 3

[node name="BackgroundPlayer1" type="Sprite" parent="Viewports/ViewportContainer/ViewportPlayer1"]
z_index = -10
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer/ViewportPlayer1"]
current = true
script = ExtResource( 3 )

[node name="worldMain" parent="Viewports/ViewportContainer/ViewportPlayer1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 513.0
margin_right = 1023.0
margin_bottom = 602.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewportPlayer2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 510, 602 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/ViewportPlayer2"]
current = true
script = ExtResource( 4 )

[node name="noise" type="TextureRect" parent="."]
visible = false
margin_left = 243.0
margin_top = 80.0
margin_right = 855.0
margin_bottom = 580.0
texture = ExtResource( 8 )
